android/build_log_v3_utf8.txt

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preReleaseBuild UP-TO-DATE
> Task :app:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preReleaseBuild UP-TO-DATE
> Task :capacitor-android:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-android:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-android:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-app:preBuild UP-TO-DATE
> Task :capacitor-app:preReleaseBuild UP-TO-DATE
> Task :capacitor-app:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-app:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-app:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-community-admob:preBuild UP-TO-DATE
> Task :capacitor-community-admob:preReleaseBuild UP-TO-DATE
> Task :capacitor-community-admob:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-community-admob:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-community-admob:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preReleaseBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-cordova-android-plugins:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-cordova-android-plugins:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-filesystem:preBuild UP-TO-DATE
> Task :capacitor-filesystem:preReleaseBuild UP-TO-DATE
> Task :capacitor-filesystem:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-filesystem:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-filesystem:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-firebase-messaging:preBuild UP-TO-DATE
> Task :capacitor-firebase-messaging:preReleaseBuild UP-TO-DATE
> Task :capacitor-firebase-messaging:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-firebase-messaging:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-firebase-messaging:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-haptics:preBuild UP-TO-DATE
> Task :capacitor-haptics:preReleaseBuild UP-TO-DATE
> Task :capacitor-haptics:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-haptics:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-haptics:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-keyboard:preBuild UP-TO-DATE
> Task :capacitor-keyboard:preReleaseBuild UP-TO-DATE
> Task :capacitor-keyboard:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-keyboard:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-keyboard:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-local-notifications:preBuild UP-TO-DATE
> Task :capacitor-local-notifications:preReleaseBuild UP-TO-DATE
> Task :capacitor-local-notifications:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-local-notifications:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-local-notifications:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-network:preBuild UP-TO-DATE
> Task :capacitor-network:preReleaseBuild UP-TO-DATE
> Task :capacitor-network:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-network:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-network:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-push-notifications:preBuild UP-TO-DATE
> Task :capacitor-push-notifications:preReleaseBuild UP-TO-DATE
> Task :capacitor-push-notifications:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-push-notifications:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-push-notifications:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capacitor-splash-screen:preBuild UP-TO-DATE
> Task :capacitor-splash-screen:preReleaseBuild UP-TO-DATE
> Task :capacitor-splash-screen:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capacitor-splash-screen:mergeReleaseNativeLibs NO-SOURCE
> Task :capacitor-splash-screen:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :capawesome-capacitor-app-update:preBuild UP-TO-DATE
> Task :capawesome-capacitor-app-update:preReleaseBuild UP-TO-DATE
> Task :capawesome-capacitor-app-update:mergeReleaseJniLibFolders UP-TO-DATE
> Task :capawesome-capacitor-app-update:mergeReleaseNativeLibs NO-SOURCE
> Task :capawesome-capacitor-app-update:copyReleaseJniLibsProjectOnly UP-TO-DATE
> Task :app:mergeReleaseNativeLibs UP-TO-DATE
> Task :app:stripReleaseDebugSymbols UP-TO-DATE
> Task :app:extractReleaseNativeSymbolTables UP-TO-DATE
> Task :app:mergeReleaseNativeDebugMetadata NO-SOURCE
> Task :capacitor-android:generateReleaseResValues UP-TO-DATE
> Task :capacitor-android:generateReleaseResources UP-TO-DATE
> Task :capacitor-android:packageReleaseResources UP-TO-DATE
> Task :capacitor-android:processReleaseNavigationResources UP-TO-DATE
> Task :capacitor-android:parseReleaseLocalResources UP-TO-DATE
> Task :capacitor-android:generateReleaseRFile UP-TO-DATE
> Task :capacitor-android:javaPreCompileRelease UP-TO-DATE

> Task :capacitor-android:compileReleaseJavaWithJavac
.\gradlew : C:\Users\Joshan
\Desktop\online mem sharing
\web\node_modules\@capacito
r\android\capacitor\src\mai
n\java\com\getcapacitor\plu
gin\SystemBars.java:161: 
error: cannot find symbol
At line:1 char:1
+ .\gradlew 
assembleRelease 
--stacktrace > 
build_log_v3.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (C:\  
  Users\Joshan...not fin   
 d symbol:String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
        if 
(Build.VERSION.SDK_INT >= B
uild.VERSION_CODES.VANILLA_
ICE_CREAM && 
insetHandlingEnabled) {
                           
                           
  ^
  symbol:   variable 
VANILLA_ICE_CREAM
  location: class 
VERSION_CODES
C:\Users\Joshan\Desktop\onl
ine mem sharing\web\node_mo
dules\@capacitor\android\ca
pacitor\src\main\java\com\g
etcapacitor\plugin\SystemBa
rs.java:172: error: cannot 
find symbol
        if 
(Build.VERSION.SDK_INT >= B
uild.VERSION_CODES.VANILLA_
ICE_CREAM && 
insetHandlingEnabled) {
                           
                           
  ^
  symbol:   variable 
VANILLA_ICE_CREAM
  location: class 
VERSION_CODES
Note: Some input files use 
unchecked or unsafe 
operations.
Note: Recompile with 
-Xlint:unchecked for 
details.
2 errors

> Task :capacitor-android:compileReleaseJavaWithJavac FAILED
